<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" android:weightSum="1">

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/current_orientation"
						android:textColor="@color/accent"
						android:textSize="14dp"
						android:textStyle="bold"
						android:includeFontPadding="false"/>

				<TextView
						android:id="@+id/current_orientation_info"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:text="0"
						android:textColor="@color/primary_text"
						android:textSize="14dp"
						android:textStyle="bold"
						android:includeFontPadding="false"/>
			</LinearLayout>

			<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp">

				<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/tap_orientation"
						android:textColor="@color/accent"
						android:textSize="14dp"
						android:textStyle="bold"
						android:includeFontPadding="false"/>
				<TextView
						android:id="@+id/tap_orientation_info"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:text="0"
						android:textColor="@color/primary_text"
						android:textSize="14dp"
						android:textStyle="bold"
						android:includeFontPadding="false"/>
			</LinearLayout>

			<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="220dp" android:layout_weight="0.36">

				<View
						android:layout_width="match_parent"
						android:layout_height="0.5dp"
						android:layout_marginTop="80dp"
						android:background="@color/accent"/>

				<View
						android:layout_width="match_parent"
						android:layout_height="0.5dp"
						android:layout_marginTop="110dp"
						android:background="@color/accent"/>

				<View
						android:layout_width="match_parent"
						android:layout_height="0.5dp"
						android:layout_marginTop="140dp"
						android:background="@color/accent"/>

				<View
						android:layout_width="0.5dp"
						android:layout_height="match_parent"
						android:layout_gravity="center_horizontal"
						android:layout_marginRight="30dp"
						android:background="@color/accent"/>

				<View
						android:layout_width="0.5dp"
						android:layout_height="match_parent"
						android:layout_gravity="center_horizontal"
						android:background="@color/accent"/>

				<View
						android:layout_width="0.5dp"
						android:layout_height="match_parent"
						android:layout_gravity="center_horizontal"
						android:layout_marginLeft="30dp"
						android:background="@color/accent"/>

				<com.mingkaic.rotorbutton.RotorButton
						android:id="@+id/rotor_button"
						android:layout_width="60dp"
						android:layout_height="60dp"
						android:background="@drawable/button_background"
						android:layout_gravity="center_horizontal"
						android:layout_marginTop="80dp"
						android:layout_marginBottom="45dp"
						android:textSize="16dp"
						android:textColor="@android:color/white"
						android:text="@string/move"
						android:includeFontPadding="false"
						app:mb_event_volume="50"
						app:mb_vibration_duration="20"
						app:mb_rotation_speed="2"/>
			</FrameLayout>
			<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/divider" android:id="@+id/view"/>
			<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:text="@string/settings"
					android:textColor="@color/accent"
					android:textSize="14dp"
					android:textStyle="bold"
					android:includeFontPadding="false" android:id="@+id/textView"/>
			<LinearLayout
					android:id="@+id/rotation_speed_bt"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:background="@drawable/selector"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical">

				<View
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:layout_marginLeft="16dp"
						android:background="@drawable/ic_movement"/>

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="16dp"
						android:orientation="vertical">

					<TextView
							android:id="@+id/rotation_speed_tv"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="4dp"
							android:textColor="?android:attr/textColorPrimary"
							android:textSize="16dp"
							android:text="10dp"
							android:includeFontPadding="false"/>

					<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textColor="?android:attr/textColorSecondary"
							android:textSize="10dp"
							android:text="@string/mb_rotation_speed"
							android:includeFontPadding="false"/>
				</LinearLayout>
			</LinearLayout>

			<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="74dp"
					android:background="@color/divider"/>

			<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="74dp"
					android:background="@color/divider"/>

			<LinearLayout
					android:id="@+id/rotation_center_offset_bt"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:background="@drawable/selector"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical">

				<View
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:layout_marginLeft="16dp"
						android:background="@drawable/ic_inner_offset"/>

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="16dp"
						android:orientation="vertical">

					<TextView
							android:id="@+id/rotation_center_offset_tv"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="4dp"
							android:textColor="?android:attr/textColorPrimary"
							android:textSize="16dp"
							android:text="16dp"
							android:includeFontPadding="false"/>

					<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textColor="?android:attr/textColorSecondary"
							android:textSize="10dp"
							android:text="@string/mb_offset_center"
							android:includeFontPadding="false"/>
				</LinearLayout>
			</LinearLayout>

			<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="74dp"
					android:background="@color/divider"/>

			<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="74dp"
					android:background="@color/divider"/>

			<LinearLayout
					android:id="@+id/volume_bt"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:background="@drawable/selector"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical">

				<View
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:layout_marginLeft="16dp"
						android:background="@drawable/ic_volume"/>

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="16dp"
						android:orientation="vertical">

					<TextView
							android:id="@+id/volume_tv"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="4dp"
							android:textColor="?android:attr/textColorPrimary"
							android:textSize="16dp"
							android:text="50"
							android:includeFontPadding="false"/>

					<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textColor="?android:attr/textColorSecondary"
							android:textSize="10dp"
							android:text="@string/mb_event_volume"
							android:includeFontPadding="false"/>
				</LinearLayout>
			</LinearLayout>

			<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:layout_marginLeft="74dp"
					android:background="@color/divider"/>

			<LinearLayout
					android:id="@+id/vibration_duration_bt"
					android:layout_width="match_parent"
					android:layout_height="70dp"
					android:background="@drawable/selector"
					android:clickable="true"
					android:focusable="true"
					android:gravity="center_vertical">

				<View
						android:layout_width="48dp"
						android:layout_height="48dp"
						android:layout_marginLeft="16dp"
						android:background="@drawable/ic_vibration"/>

				<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginLeft="10dp"
						android:layout_marginRight="16dp"
						android:orientation="vertical">

					<TextView
							android:id="@+id/vibration_duration_tv"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_marginBottom="4dp"
							android:textColor="?android:attr/textColorPrimary"
							android:textSize="16dp"
							android:text="20 Milliseconds"
							android:includeFontPadding="false"/>

					<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:textColor="?android:attr/textColorSecondary"
							android:textSize="10dp"
							android:text="@string/mb_vibration_duration"
							android:includeFontPadding="false"/>
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:background="?attr/colorPrimary"
		android:gravity="center_vertical"
		android:minHeight="?attr/actionBarSize"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

</LinearLayout>
